<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tittle_home" />
    <item
        android:id="@+id/navigation_search"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search" />
    <item
        android:id="@+id/navigation_add"
        android:title="@string/title_add"
        android:icon="@drawable/ic_add" />
    <item
        android:id="@+id/navigation_chat"
        android:title="@string/chats"
        android:icon="@drawable/people" />

    <item
        android:id="@+id/navigation_personal"
        android:title="@string/title_personal"
        android:icon="@drawable/profile" />

</menu>
