<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_personal">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.lucas.sashat.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/fragment_add"
        android:name="com.lucas.sashat.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.lucas.sashat.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal">
        <action
            android:id="@+id/action_personalFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.lucas.sashat.ui.personal.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_profileFragment_to_personalFragment"
        app:destination="@id/navigation_personal" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lucas.sashat.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lucas.sashat.ui.home.HomeFragment"
        android:label="navigation_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_createPostFragment"
            app:destination="@id/createPostFragment" />
    </fragment>


    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.lucas.sashat.ui.home.CreatePostFragment"
        android:label="CreatePostFragment"
        tools:layout="@layout/fragment_create_post"/>
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.lucas.sashat.ui.home.AddOptions"
        android:label="AddOptions"
        tools:layout="@layout/add_options">
    </fragment>

</navigation>
