<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personal.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Imagen de perfil redonda -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="160dp"
            android:layout_height="153dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:contentDescription="@string/profile"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/boy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfile"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            app:strokeColor="@color/background"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:text="@string/edit_profile"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="70dp"
            android:fontFamily="serif"
            android:text="Nombre de usuario "
            android:textColor="@color/fondo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePhoto" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditUser" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:text="@string/description"
            android:textColor="@color/fondo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvEditUser"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <TextView
            android:id="@+id/tvChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/change_photo"
            android:textColor="@color/textBtn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/textBtn"
            android:text="Guardar"
            android:textAllCaps="false"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
