<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.personal.PersonalFragment"
    android:id="@+id/fragment_personal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@drawable/boy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            app:strokeColor="@color/background"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="username"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumSeguidores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="15"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="followers"
            android:textColor="@color/text"
            app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
            app:layout_constraintTop_toBottomOf="@+id/tvNumSeguidores" />

        <TextView
            android:id="@+id/tvNumFollowed"
            android:layout_width="27dp"
            android:layout_height="21dp"
            android:layout_marginTop="20dp"
            android:text="20"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvFollowed"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/tvFollowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="followed"
            android:textColor="@color/text"
            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvNumFollowed" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/background"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/textBtn"
            android:textSize="15sp"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripción"
            app:strokeColor="@color/ambar"
            app:strokeWidth="1.5dp" />

        <TextView
            android:id="@+id/tvDescripción"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Descripción del perfil"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEditar"
            app:tabIndicatorColor="@color/textBtn"
            app:tabSelectedTextColor="@color/textBtn"
            app:tabTextColor="@color/text"
            app:tabUnboundedRipple="true">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabLeidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEnLectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPendientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending_read" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />

        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/textBtn"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toEndOf="@+id/btnEditar"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripción"/>

        <ImageView
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
